addressbook-access-test tests accesst to contacts in addressbook
It searches contacts whose email contains the passed argument.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS=-Wall -I/usr/include/evolution-data-server -I/usr/lib64/glib-2.0/include -I/usr/include/glib-2.0 -I/usr/include/libsoup-2.4 -I/usr/include/nspr4 -I/usr/include/libxml2 -I/usr/include/evolution-3.10 -I/usr/include/gtk-3.0 -I/usr/include/pango-1.0 -I/usr/include/cairo -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/atk-1.0 -I/usr/include/libgtkhtml-4.0/editor -I/usr/include/libgtkhtml-4.0 -I/usr/include/webkitgtk-3.0
-AM_LDFLAGS=-L/usr/lib64/evolution/3.10 -levolution-shell -lnss3 -lplc4
+AM_LDFLAGS=-L/usr/lib64/evolution/3.10 -levolution-shell -lnss3 -lplc4 -levolution-util -lebook-1.2 -ledataserver-1.2 -lglib-2.0 -lebook-contacts-1.2
 
 bin_PROGRAMS = addressbook_access_test testmodule
 addressbook_access_test_SOURCES = addressbook-access-test.c 
