Testing of module's functionalities

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -3,7 +3,8 @@ AM_LDFLAGS=-ldl
 
 bin_PROGRAMS = test_app addressbook_access_test 
 #bin_PROGRAMS = test_app addressbook_access_test testmodule 
-test_app_SOURCES = test-app.c
+test_app_SOURCES = test-app.c test-session.c test-search.c test-attribute-value.c
+test_app_LDADD = -lglib-2.0
 addressbook_access_test_SOURCES = addressbook-access-test.c 
 addressbook_access_test_LDADD = -ledataserver-1.2 -lebook-contacts-1.2  -lebook-1.2 -L/usr/lib64/evolution/3.10 -levolution-util
 #testmodule_SOURCES = test.c
