Update build system. Use automating macros.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,5 @@
-AM_CFLAGS=-Wall
-
+AM_CFLAGS=-Wall $(EBOOK_CFLAGS)
 
 lib_LTLIBRARIES = evolution-pkcs11.la
 evolution_pkcs11_la_SOURCES = pkcs11.c pkcs11.h pkcs11f.h pkcs11t.h object.h object.c session.h session.c util.h util.c
-evolution_pkcs11_la_LDFLAGS= -module
-
-
-
+evolution_pkcs11_la_LDFLAGS= -module $(EBOOK_LIBS)
